--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "node": "^21.2.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Shapi-Gang/NUSMap.git"
-  },  
+  },
   "devDependencies": {
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.3",
