--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "nusmap",
-  "version": "1.0.0",
-  "description": "![concept](res\\images\\concept.png)",
+  "version": "1.1.0", 
+  "description": "",
   "main": "index.js",
   "directories": {
-    "doc": "docs",
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "start": "node src/backend/app.js",
+    "test": "jest",
+    "insertTestData": "node src/scripts/insertTestData.js" 
   },
   "keywords": [],
-  "author": "",
+  "author": "YF, WQ",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
