--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "nusmap",
-  "version": "1.1.0", 
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "start": "node src/backend/app.js",
+    "start": "node --no-warnings ./src/backend/app.js",
     "test": "jest",
-    "insertTestData": "node src/scripts/insertTestData.js" 
+    "insertTestData": "node ./src/backend/scripts/insertTestData.js"
   },
   "keywords": [],
   "author": "YF, WQ",
@@ -26,6 +26,7 @@
     "url": "https://github.com/Shapi-Gang/NUSMap.git"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.0.2",
